--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,6 @@ under the License.
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<flink.version>1.17.1</flink.version>
-		<!--		<java.version>1.8</java.version>-->
 		<target.java.version>11</target.java.version>
 		<scala.binary.version>2.11</scala.binary.version>
 		<maven.compiler.source>${target.java.version}</maven.compiler.source>
@@ -242,6 +241,12 @@ under the License.
 					<artifactId>flink-streaming-java</artifactId>
 					<version>${flink.version}</version>
 					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.projectlombok</groupId>
+					<artifactId>lombok</artifactId>
+					<version>1.18.28</version>
+					<optional>true</optional>
 				</dependency>
 			</dependencies>
 		</profile>
